--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -11,12 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Media"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".VideoActivity"
+            android:exported="false"
+            android:label="@string/title_activity_video"
+            android:theme="@style/Theme.Media" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Media" >
+            android:theme="@style/Theme.Media">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
